--- a/templates/musicshop/cart.html
+++ b/templates/musicshop/cart.html
@@ -4,52 +4,57 @@
     <div class="cart-page shadow">
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
-            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                  <div class="fs-4">
-                      Корзина
-                  </div>
-              </button>
-            </h2>
-            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-              <div class="accordion-body">
-                  {% table_catalog cart_items cart sort_order "cart" %}
-                    <div class="container">
-                        <p class = "price_cart fs-5 text-end">
-                            Итого: {{ num_items }} {{ num_items|get_correct_items_word }} на <b>{{ cost }} руб.</b>
-                        </p>
+                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        <div class="fs-4">
+                            Корзина
+                        </div>
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body">
+                        {% table_catalog cart_items cart sort_order "cart" %}
+                        <div class="container">
+                            <p class = "price_cart fs-5 text-end">
+                                Итого: {{ num_items }} {{ num_items|get_correct_items_word }} на <b>{{ cost }} руб.</b>
+                            </p>
+                        </div>
                     </div>
-              </div>
+                </div>
             </div>
-          </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                    <p class = "fs-5">Оформление заказа</p>
-                  </button>
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                        <p class = "fs-5">Оформление заказа</p>
+                    </button>
                 </h2>
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                  <div class="accordion-body">
-                      <form class="order-form">
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Оформить</button>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Создать профиль
-                        </button>
-                      </form>
-                  </div>
+                    <div class="accordion-body">
+                        <form class="order-form" method="post">
+                            <div class="mb-3">
+                                <label for="chooseClient" class="form-label">Выбор покупателя:</label>
+                                <select class="form-select" aria-label="Default select example" id = "chooseClient">
+                                    <option selected>Выберите покупателя из списка (возможен поиск)</option>
+                                    <option value="1">Дмитрий</option>
+                                    <option value="2">Петр</option>
+                                    <option value="3">Стас</option>
+                                </select>
+                                <div id="chooseClientHelp" class="form-text">Тут будет ссылка на создание нового клиента</div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="cbx_first_storage">
+                                <label class="form-check-label" for="cbx_first_storage">Добавлять сначала товары со склада</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Оформить заказ</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Создать профиль
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
