--- a/templates/musicshop/table_catalog.html
+++ b/templates/musicshop/table_catalog.html
@@ -74,7 +74,7 @@
         <th scope="col" ><input type="checkbox" onClick="toggle(this, 'cbx_slave')"/></th>
         <th scope="col">Артикул</th>
         <th scope="col">Производитель</th>
-        <th scope="col">Наименование</th>
+        <th scope="col" class = "w-25">Наименование</th>
         <th scope="col">Цена</th>
         <th scope="col">Остаток</th>
         <th scope="col">Гарантия</th>
