--- a/templates/musicshop/item_about.html
+++ b/templates/musicshop/item_about.html
@@ -7,12 +7,12 @@
       <div class="item-label container-fluid">
         <div class="row">
           <div class="col">
-            <label class = "fs-3">{{ item.name }} </label>
+            <label class = "fs-3">{{ item.name | upper }} </label>
           </div>
         </div>
         <div class="row">
           <div class="col">
-            <label class = "fs-5 vendor-label">{{ item.vendor }} (арт. {{ item.vendor_code }})</label>
+            <label class = "fs-5 vendor-label">{{ item.vendor | upper }} (арт. {{ item.vendor_code | upper }})</label>
           </div>
           <div class="col align-self-end">
 
