--- a/templates/musicshop/login.html
+++ b/templates/musicshop/login.html
@@ -48,7 +48,7 @@
                                 <label class="form-label" for={{ form.password.id_for_label }}>Пароль</label>
                                 {{ form.password }}
                             </div>
-                            <button type="button" class="btn btn-success mb-auto w-100 shadow-sm">Войти</button>
+                            <button type="submit" class="btn btn-success mb-auto w-100 shadow-sm">Войти</button>
 
                         </form>
                     </div>
